// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render table of contents 1`] = `
<div>
  <div>
    <div>
      <input
        aria-label="Filter by name"
        onChange={[Function]}
        placeholder="Filter by name"
        value="foo"
      />
    </div>
    <nav />
  </div>
</div>
`;

exports[`should filter list when search field contains a query 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Button",
          "sections": Array [],
          "slug": "button",
        },
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Input",
          "sections": Array [],
          "slug": "input",
        },
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Textarea",
          "sections": Array [],
          "slug": "textarea",
        },
      ]
    }
    useIsolatedLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter list when search field contains a query 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="but"
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Button",
          "sections": Array [],
          "slug": "button",
        },
      ]
    }
    useIsolatedLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Introduction",
          "sections": Array [],
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <ComponentsList
            items={
              Array [
                Object {
                  "content": false,
                  "heading": false,
                  "name": "Button",
                  "slug": "button",
                },
              ]
            }
            useIsolatedLinks={false}
          />,
          "heading": true,
          "name": "Buttons",
          "sections": Array [],
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <ComponentsList
            items={
              Array [
                Object {
                  "content": false,
                  "heading": false,
                  "name": "Input",
                  "slug": "input",
                },
                Object {
                  "content": false,
                  "heading": false,
                  "name": "Textarea",
                  "slug": "textarea",
                },
              ]
            }
            useIsolatedLinks={false}
          />,
          "heading": true,
          "name": "Forms",
          "sections": Array [],
          "slug": "forms",
        },
      ]
    }
    useIsolatedLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="frm"
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Forms",
          "sections": Array [],
          "slug": "forms",
        },
      ]
    }
    useIsolatedLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should render a renderer 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Button",
          "sections": Array [],
          "slug": "button",
        },
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Input",
          "sections": Array [],
          "slug": "input",
        },
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Textarea",
          "sections": Array [],
          "slug": "textarea",
        },
      ]
    }
    useIsolatedLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should render renderer with sections with nested components 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    items={
      Array [
        Object {
          "components": Array [],
          "content": false,
          "heading": false,
          "name": "Introduction",
          "sections": Array [],
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <ComponentsList
            items={
              Array [
                Object {
                  "content": false,
                  "heading": false,
                  "name": "Button",
                  "slug": "button",
                },
              ]
            }
            useIsolatedLinks={false}
          />,
          "heading": true,
          "name": "Buttons",
          "sections": Array [],
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <ComponentsList
            items={
              Array [
                Object {
                  "content": false,
                  "heading": false,
                  "name": "Input",
                  "slug": "input",
                },
                Object {
                  "content": false,
                  "heading": false,
                  "name": "Textarea",
                  "slug": "textarea",
                },
              ]
            }
            useIsolatedLinks={false}
          />,
          "heading": true,
          "name": "Forms",
          "sections": Array [],
          "slug": "forms",
        },
      ]
    }
    useIsolatedLinks={false}
  />
</Styled(TableOfContents)>
`;
